methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:4: error: not found: value verslAvant
  if(verslAvant==true){
     ^MethodsArgs:10: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return versLAvant
         ^MethodsArgs:10: warning: enclosing method move has result type Unit: return value discarded
  return versLAvant
  ^